# mlir-boilerplate

./: CMakeLists.txt  LICENSE.txt  README.md
ragdoll-src/include/: CMakeLists.txt
ragdoll-src/include/Dialect/Ragdoll/: CMakeLists.txt  RagdollAttrs.td  RagdollDialect.h  RagdollInterfaces.td  RagdollOps.h
ragdoll-src/include/Optimisation/: CMakeLists.txt  Passes.h  Passes.td
ragdoll-src/include/Pipeline/: Pipelines.h
ragdoll-src/include/Ragdoll/: CMakeLists.txt  RagdollDialect.h  RagdollDialect.td  RagdollOps.h  RagdollOps.td
ragdoll-src/lib/: CMakeLists.txt
ragdoll-src/lib/Dialect/Ragdoll/: CMakeLists.txt  RagdollDialect.cpp  RagdollOps.cpp
ragdoll-src/lib/Optimisation/: CMakeLists.txt
ragdoll-src/lib/Optimisation/Ragdoll/: RagdollDummyPass.cpp
ragdoll-src/lib/Pipeline/: CMakeLists.txt  Pipelines.cpp
ragdoll-src/lib/Ragdoll/: CMakeLists.txt  RagdollOps.cpp
ragdoll-src/tools/: CMakeLists.txt
ragdoll-src/tools/ragdoll-opt/: CMakeLists.txt  ragdoll-opt.cpp
scripts/: build_ragdoll.sh
tests/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
tests/Ragdoll/: dummy.mlir
